--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Python
 __pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+*.pyc
 build/
 develop-eggs/
 dist/
@@ -35,9 +37,13 @@ ENV/
 # Logs
 *.log
 
-# Local development
+# Environment and secrets (NEVER COMMIT!)
 .env
 .env.local
+.env.*.local
+*.pem
+*.key
+secrets/
 
 # Testing
 .coverage
